openshift/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: example-app
